bindings/vala/src/lib_proven.vapi

// SPDX-License-Identifier: PMPL-1.0-or-later
// Copyright (c) 2026 Jonathan D.A. Jewell (hyperpolymath) <jonathan.jewell@open.ac.uk>

/**
 * lib_proven.vapi -- Vala VAPI declarations for libproven C ABI.
 *
 * This file declares every extern C function, struct, and enum exported by
 * libproven.  Vala compiles to C so these are direct C interop bindings --
 * no reimplementation of any logic occurs here.
 *
 * Link with: -lproven
 */

[CCode (cheader_filename = "proven.h")]
namespace LibProven {

    /* ================================================================
     * Status codes
     * ================================================================ */

    [CCode (cname = "ProvenStatus", cprefix = "PROVEN_", has_type_id = false)]
    public enum Status {
        [CCode (cname = "PROVEN_OK")]
        OK = 0,
        [CCode (cname = "PROVEN_ERR_NULL_POINTER")]
        ERR_NULL_POINTER = -1,
        [CCode (cname = "PROVEN_ERR_INVALID_ARGUMENT")]
        ERR_INVALID_ARGUMENT = -2,
        [CCode (cname = "PROVEN_ERR_OVERFLOW")]
        ERR_OVERFLOW = -3,
        [CCode (cname = "PROVEN_ERR_UNDERFLOW")]
        ERR_UNDERFLOW = -4,
        [CCode (cname = "PROVEN_ERR_DIVISION_BY_ZERO")]
        ERR_DIVISION_BY_ZERO = -5,
        [CCode (cname = "PROVEN_ERR_PARSE_FAILURE")]
        ERR_PARSE_FAILURE = -6,
        [CCode (cname = "PROVEN_ERR_VALIDATION_FAILED")]
        ERR_VALIDATION_FAILED = -7,
        [CCode (cname = "PROVEN_ERR_OUT_OF_BOUNDS")]
        ERR_OUT_OF_BOUNDS = -8,
        [CCode (cname = "PROVEN_ERR_ENCODING_ERROR")]
        ERR_ENCODING_ERROR = -9,
        [CCode (cname = "PROVEN_ERR_ALLOCATION_FAILED")]
        ERR_ALLOCATION_FAILED = -10,
        [CCode (cname = "PROVEN_ERR_NOT_IMPLEMENTED")]
        ERR_NOT_IMPLEMENTED = -99;

        /** Human-readable description of a status code. */
        public string to_description () {
            switch (this) {
                case OK:                    return "Success";
                case ERR_NULL_POINTER:      return "Null pointer";
                case ERR_INVALID_ARGUMENT:  return "Invalid argument";
                case ERR_OVERFLOW:          return "Overflow";
                case ERR_UNDERFLOW:         return "Underflow";
                case ERR_DIVISION_BY_ZERO:  return "Division by zero";
                case ERR_PARSE_FAILURE:     return "Parse failure";
                case ERR_VALIDATION_FAILED: return "Validation failed";
                case ERR_OUT_OF_BOUNDS:     return "Out of bounds";
                case ERR_ENCODING_ERROR:    return "Encoding error";
                case ERR_ALLOCATION_FAILED: return "Allocation failed";
                case ERR_NOT_IMPLEMENTED:   return "Not implemented";
                default:                    return "Unknown error (%d)".printf ((int) this);
            }
        }
    }

    /* ================================================================
     * Core result types
     * ================================================================ */

    [CCode (cname = "ProvenIntResult", has_type_id = false)]
    public struct IntResult {
        public int32 status;
        public int64  value;
    }

    [CCode (cname = "ProvenBoolResult", has_type_id = false)]
    public struct BoolResult {
        public int32 status;
        public bool  value;
    }

    [CCode (cname = "ProvenStringResult", has_type_id = false)]
    public struct StringResult {
        public int32  status;
        public char*  value;
        public size_t length;
    }

    [CCode (cname = "ProvenFloatResult", has_type_id = false)]
    public struct FloatResult {
        public int32  status;
        public double value;
    }

    /* ================================================================
     * Memory management
     * ================================================================ */

    [CCode (cname = "proven_free_string")]
    public static void free_string (char* ptr);

    /* ================================================================
     * Lifecycle
     * ================================================================ */

    [CCode (cname = "proven_init")]
    public static int32 init ();

    [CCode (cname = "proven_deinit")]
    public static void deinit ();

    [CCode (cname = "proven_is_initialized")]
    public static bool is_initialized ();

    /* ================================================================
     * Version information
     * ================================================================ */

    [CCode (cname = "proven_ffi_abi_version")]
    public static uint32 ffi_abi_version ();

    [CCode (cname = "proven_version_major")]
    public static uint32 version_major ();

    [CCode (cname = "proven_version_minor")]
    public static uint32 version_minor ();

    [CCode (cname = "proven_version_patch")]
    public static uint32 version_patch ();

    [CCode (cname = "proven_module_count")]
    public static uint32 module_count ();

    /* ================================================================
     * SafeMath
     * ================================================================ */

    [CCode (cname = "proven_math_div")]
    public static IntResult math_div (int64 numerator, int64 denominator);

    [CCode (cname = "proven_math_mod")]
    public static IntResult math_mod (int64 numerator, int64 denominator);

    [CCode (cname = "proven_math_add_checked")]
    public static IntResult math_add_checked (int64 a, int64 b);

    [CCode (cname = "proven_math_sub_checked")]
    public static IntResult math_sub_checked (int64 a, int64 b);

    [CCode (cname = "proven_math_mul_checked")]
    public static IntResult math_mul_checked (int64 a, int64 b);

    [CCode (cname = "proven_math_abs_safe")]
    public static IntResult math_abs_safe (int64 n);

    [CCode (cname = "proven_math_clamp")]
    public static int64 math_clamp (int64 lo, int64 hi, int64 value);

    [CCode (cname = "proven_math_pow_checked")]
    public static IntResult math_pow_checked (int64 base_val, uint32 exp);

    /* ================================================================
     * SafeString
     * ================================================================ */

    [CCode (cname = "proven_string_is_valid_utf8")]
    public static BoolResult string_is_valid_utf8 ([CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_string_escape_sql")]
    public static StringResult string_escape_sql ([CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_string_escape_html")]
    public static StringResult string_escape_html ([CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_string_escape_js")]
    public static StringResult string_escape_js ([CCode (array_length_type = "size_t")] uint8[] data);

    /* ================================================================
     * SafePath
     * ================================================================ */

    [CCode (cname = "proven_path_has_traversal")]
    public static BoolResult path_has_traversal ([CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_path_sanitize_filename")]
    public static StringResult path_sanitize_filename ([CCode (array_length_type = "size_t")] uint8[] data);

    /* ================================================================
     * SafeCrypto
     * ================================================================ */

    [CCode (cname = "proven_crypto_constant_time_eq")]
    public static BoolResult crypto_constant_time_eq (
        [CCode (array_length_type = "size_t")] uint8[] data1,
        [CCode (array_length_type = "size_t")] uint8[] data2
    );

    [CCode (cname = "proven_crypto_random_bytes")]
    public static int32 crypto_random_bytes ([CCode (array_length_type = "size_t")] uint8[] buffer);

    /* ================================================================
     * SafeUrl
     * ================================================================ */

    [CCode (cname = "ProvenUrlComponents", has_type_id = false, destroy_function = "")]
    public struct UrlComponents {
        public char*  scheme;       public size_t scheme_len;
        public char*  host;         public size_t host_len;
        public uint16 port;         public bool   has_port;
        public char*  path;         public size_t path_len;
        public char*  query;        public size_t query_len;
        public char*  fragment;     public size_t fragment_len;
    }

    [CCode (cname = "ProvenUrlResult", has_type_id = false, destroy_function = "")]
    public struct UrlResult {
        public int32         status;
        public UrlComponents components;
    }

    [CCode (cname = "proven_url_parse")]
    public static UrlResult url_parse ([CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_url_free")]
    public static void url_free (UrlComponents* components);

    /* ================================================================
     * SafeEmail
     * ================================================================ */

    [CCode (cname = "proven_email_is_valid")]
    public static BoolResult email_is_valid ([CCode (array_length_type = "size_t")] uint8[] data);

    /* ================================================================
     * SafeNetwork
     * ================================================================ */

    [CCode (cname = "ProvenIPv4Address", has_type_id = false)]
    public struct IPv4Address {
        [CCode (array_length = false)]
        public uint8 octets[4];
    }

    [CCode (cname = "ProvenIPv4Result", has_type_id = false)]
    public struct IPv4Result {
        public int32       status;
        public IPv4Address address;
    }

    [CCode (cname = "proven_network_parse_ipv4")]
    public static IPv4Result network_parse_ipv4 ([CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_network_ipv4_is_private")]
    public static bool network_ipv4_is_private (IPv4Address addr);

    [CCode (cname = "proven_network_ipv4_is_loopback")]
    public static bool network_ipv4_is_loopback (IPv4Address addr);

    /* ================================================================
     * SafeJson
     * ================================================================ */

    [CCode (cname = "ProvenJsonType", cprefix = "PROVEN_JSON_", has_type_id = false)]
    public enum JsonType {
        [CCode (cname = "PROVEN_JSON_NULL")]
        NULL = 0,
        [CCode (cname = "PROVEN_JSON_BOOL")]
        BOOL = 1,
        [CCode (cname = "PROVEN_JSON_NUMBER")]
        NUMBER = 2,
        [CCode (cname = "PROVEN_JSON_STRING")]
        STRING = 3,
        [CCode (cname = "PROVEN_JSON_ARRAY")]
        ARRAY = 4,
        [CCode (cname = "PROVEN_JSON_OBJECT")]
        OBJECT = 5,
        [CCode (cname = "PROVEN_JSON_INVALID")]
        INVALID = -1
    }

    [CCode (cname = "proven_json_is_valid")]
    public static BoolResult json_is_valid ([CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_json_get_type")]
    public static JsonType json_get_type ([CCode (array_length_type = "size_t")] uint8[] data);

    /* ================================================================
     * SafeDateTime
     * ================================================================ */

    [CCode (cname = "ProvenDateTime", has_type_id = false)]
    public struct DateTime {
        public int32  year;
        public uint8  month;
        public uint8  day;
        public uint8  hour;
        public uint8  minute;
        public uint8  second;
        public uint32 nanosecond;
        public int16  tz_offset_minutes;
    }

    [CCode (cname = "ProvenDateTimeResult", has_type_id = false)]
    public struct DateTimeResult {
        public int32    status;
        public DateTime datetime;
    }
